fix overflowing notes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2603,11 +2603,11 @@ CLINICIAN STUFF
   background-color: #fff740;
   margin-bottom: 10px;
   min-height: 120px;
-  max-height: 200px;
+  max-height: 300px;
   padding: 15px;
   position: relative;
 
-  /* overflow: auto; */
+  overflow: auto;
   display: flex;
   flex-direction: column;
 }
